--- a/docroot/styles.css
+++ b/docroot/styles.css
@@ -1,3 +1,11 @@
 body {
   font-family: Arial, sans-serif;
 }
+
+.contact-form__inputs > label {
+  display: block;
+}
+
+textarea {
+  padding: 10px;
+}
